syntax = "proto3";

package model;

option java_package = "org.oppia.app.model";
option java_multiple_files = true;

message SubtitledHtml {
  string html = 1;
  string content_id = 2;
}
